--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,6 +29,9 @@
     resources.mail.transport.password = "83a49962d3bc0731139651ce3f013af1"
     resources.mail.transport.ssl = "tls"
 
+    ;ovo je za ispis rezultata sql upita
+    resources.db.params.profiler = true
+
 
 [staging : production]
 
