--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,7 @@
     resources.mail.transport.ssl = "tls"
 
     ;ovo je za ispis rezultata sql upita
-    resources.db.params.profiler = true
+    ;resources.db.params.profiler = true
 
 
 [staging : production]
